--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,15 +2,21 @@
   <div class="container">
     <header>
       <h1>Todo List ({{incompleteCount}})</h1>
+      <!-- <h3>{{currentUser.username}}</h3> -->
 
       <label class="hide-completed">
         <input type="checkbox" />
         Hide Completed Tasks
       </label>
 
-      <form class="new-task">
-        <input type="text" name="text" placeholder="Type to add new tasks" />
-      </form>
+       {{> loginButtons}}
+
+       {{#if currentUser}}
+        <form class="new-task">
+          <input type="text" name="text" placeholder="Type to add new tasks" />
+        </form>
+      {{/if}}
+      
     </header>
 
     <ul>
